footer bar across screen

--- a/FinalProject/pages/Aang.html
+++ b/FinalProject/pages/Aang.html
@@ -111,6 +111,8 @@
 					avatar's attachment with their past lives.
 				</p>
 				<h3>Travel to the spirit world</h3>
+				<p>When focused and in a place with a lot of spititual energy, Aang can travel to the spirit world and
+					commune with them. This is why the Avatar is also known as "the bridge between worlds".</p>
 				<h3>Energy bending</h3>
 				<p>
 					Aang learns energybending from a giant lion turtle. It is the ability to
@@ -151,15 +153,15 @@
 			</div>
 			<button type="button" class="btnFooter">Close Section</button>
 		</section>
-
-		<footer>
-			<a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
-				target="_blank">
-				<i class="fa fa-github">My Github Repo</i>
-			</a>
-			<a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
-		</footer>
 	</main>
+
+	<footer>
+		<a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
+			target="_blank">
+			<i class="fa fa-github">My Github Repo</i>
+		</a>
+		<a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
+	</footer>
 </body>
 <script src="../scripts.js"></script>
 
