--- a/FinalProject/pages/Zuko.html
+++ b/FinalProject/pages/Zuko.html
@@ -80,8 +80,12 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <h3>Redirect lightning</h3>
                 <img src="../images/lightning.gif" alt="">
-                <p>Fire breath, redirect lightning, dual swords</p>
+                <p>Zuko learns to redirect lightning from his Uncle Iroh, who picked it up by studying waterbenders. He
+                    uses the ability to counter both Ozai and Azula, and teaches the skill to Aang.</p>
+                <h3>Fire breath</h3>
+                <h3>Dual swords</h3>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -108,15 +112,15 @@
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
-
-        <footer>
-            <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
-                target="_blank">
-                <i class="fa fa-github">My Github Repo</i>
-            </a>
-            <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
-        </footer>
     </main>
+
+    <footer>
+        <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
+            target="_blank">
+            <i class="fa fa-github">My Github Repo</i>
+        </a>
+        <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
+    </footer>
 </body>
 <script src="../scripts.js"></script>
 
