--- a/FinalProject/pages/Katara.html
+++ b/FinalProject/pages/Katara.html
@@ -7,6 +7,8 @@
     <title>Painted Lady</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body class="kataraBody size">
@@ -97,7 +99,7 @@
     <footer>
         <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
             target="_blank">
-            <i class="fa fa-github">My Github Repo</i>
+            <i class="fa fa-github"> My Github Repo</i>
         </a>
         <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
     </footer>
