--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characters</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -25,17 +27,17 @@
 
     <H1>Select a Character</H1>
 
-    <div class="charContainer">
+    <section class="charContainer">
         <a href="pages/Aang.html"><img src="images/charAangFitted.png" id="charPageAang" alt=""></a>
         <a href="pages/Katara.html"><img src="images/charKataraFitted.png" id="charPageKatara" alt=""></a>
         <a href="pages/Toph.html"><img src="images/charTophFitted.png" id="charPageToph" alt=""></a>
         <a href="pages/Zuko.html"><img src="images/charZukoFitted.png" id="charPageZuko" alt=""></a>
-    </div>
+    </section>
 
     <footer>
         <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
             target="_blank">
-            <i class="fa fa-github">My Github Repo</i>
+            <i class="fa fa-github"> My Github Repo</i>
         </a>
         <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
     </footer>
